fix svg element alignment d:31012024

--- a/style.css
+++ b/style.css
@@ -6,15 +6,18 @@ body {
 }
 
 .sgs-flex {
-  
+  /* display: flex; */
 }
 
 .box {
   background-color: white;
   border-radius: 20px; 
   border: 1px solid hsl(0, 0%, 7%);
-  width: 350px;
-  /* padding: 20px; */
+  /* width: 350px; */
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+  padding: 20px;
 }
 
 .img-container {
@@ -23,5 +26,7 @@ body {
 
 .image-comp {
   border-radius: 10px;
+  display: block;
+  margin: auto;
   /* clip-path: ; */
 }
